--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ hr{
  height: 10px;
  border-radius: 10px;
  outline: none;
- background-color: var(--clr-neutral-empty-slider-bar);
+ background: linear-gradient(to right,  hsl(174, 86%, 45%) 0%,  hsl(174, 86%, 45%) 50%, hsl(224, 65%, 95%) 0%, hsl(224, 65%, 95%) 100%);
 }
 #slider::-webkit-slider-thumb{
   -webkit-appearance: none;
@@ -175,42 +175,16 @@ hr{
   height: 40px;
   border-radius: 50%;
   cursor: pointer;
-  z-index: 3;
-  position: relative;
-
-}
-
-#selector{
-  position: absolute;
-  height: 104px;
-  width: 40px;
-  bottom: -20px;
-  left: 50%;
-  transform: translate(-50%);
-  z-index: 2;
-  
-}
-#selectBtn{
-  height: 40px;
-  width: 40px;
   background-image: url(images/icon-slider.svg);
   background-repeat: no-repeat;
-  background-position: center;
-  position: absolute;
-  bottom: 10px;
   background-color: var(--clr-primary-slider-bg);
-  border-radius: 50%;
-  box-shadow:0px 10px 26px 0px var(--clr-primary-slider-bg) ;
+  background-position: 50% 50%;
+  position: relative;
 }
-#progress-bar{
-  width: 50%;
-  height: 10px;
-  background-color: var(--clr-primary-slider-bg);
-  position: absolute;
-  top: 9px;
-  border-radius: 10px;
-  bottom: 0;
+#slider::-webkit-slider-thumb:hover{
+  box-shadow: 0px 0px 10px hsl(174, 86%, 45%) ;
 }
+
 .total-price{
   font-size: 2rem;
   font-weight: var(--fw-bold);
